# TinyML-firstResponder-

./: .gitignore  .pre-commit-config.yaml  README.md  data_collection_pipeline.ipynb  diagram.json  distress_log.txt  emergency_log.txt  model.cpp  pyproject.toml  requirements.txt  run_detector.py  run_emergency_detector.py  sketch.ino  train_model.py  verify_model.py  wokwi-project.txt
docs/: v1.1_architecture_spec.md  v1_context.md  v1_workflow.mmd  v2_context.md
src/: README.md  __init__.py  audio_capture.py  config.py  emergency_detector.py  feature_extraction.py  main.py  model.py  speech-to-text_.py
src/data/: data_generator.py
src/engine/: inference.py
src/features/: feature_extraction.py
src/model/: __init__.py  architecture.py  layers.py  train.py
tests/: __init__.py  conftest.py  test_model.py
training_pipeline/: context_for_training.md
